<resources> 

    <string name="app_prefix">Job</string>
    <string name="app_name">ТК РБ</string>
    <string name="app_caption">Трудовой кодекс Республики Беларусь</string>
    
    <string name="menu_email">Есть хорошая идея?</string>
    <string name="menu_vote">Голосование</string>
    <string name="menu_info">О документе</string>
    <string name="menu_add_bookmark">Добавить закладку</string>
    <string name="menu_text_copy">Копировать текст</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_show_bookmarks">Закладки</string>
    <string name="menu_color_toggle">Цвет</string>
    <string name="menu_text_size">Размер текста</string>
    <string name="menu_update">Новая версия!</string>
    
    <string name="text_copy_msg">Текст скопирован</string>
    <string name="text_copy_msg_err">Ошибка копирования</string>
    <string name="press_back_for_exit">Нажмите снова для выхода</string>
    
    <string name="dialog_email">Отправить сообщение разработчику</string>
    <string name="dialog_email_who_are_you">Представитесь?</string>
    <string name="dialog_email_message_text">Можете писать что угодно :)</string>
    
    <string name="dialog_text_size">Изменить размер текста</string>
    
    <string name="you_have_no_bookmarks">У вас нет закладок</string>
    <string name="bookmark_already_exists">Эта статья уже есть в ваших закладках!</string>
    <string name="why_do_you_want_this">Зачем вам такая закладка?</string>
    <string name="can_not_copy_this">Что же вы хотите скопировать здесь?</string>
    <string name="bookmark_added">Статья добавлена в закладки</string>
    <string name="delete_bookmark_x">× </string>
    
    <string name="arrow_to_right">></string>
    <string name="arrow_to_left">&lt;</string>
	
	<string name="msg_everything_fine">Сообщение отправлено. Заглядываю я в них не часто, так что если у вас что-то важное, то лучше свяжитесь со мной по eMail</string>
	<string name="msg_send_error">При передаче данных произошла ошибка. Проверьте интернет-соединение и повторите</string>
	<string name="msg_you_forgot">Вы забыли написать сообщение :)</string>
	<string name="msg_send_in_progress">Отправка сообщения</string>
	
	<string name="go_next_chapter" >Следующая глава</string>	
	<string name="go_prev_chapter" >Предыдущая глава</string>	    
    
	<string name="test_chapter">123</string>

    <string name="db_version">f5fbbfedbb0b56f34aa4cae40e7c79b84d490890</string>

    
    
</resources>
