<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="10"
            android:background="@drawable/gradient_toolbar"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/dialog_email" />
        </LinearLayout>

        <View
            android:layout_width="2dip"
            android:layout_height="fill_parent"
            android:background="@drawable/gradient_splitline"
            android:padding="@android:dimen/app_icon_size"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/gradient_toolbar"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/email_button_background"
                android:onClick="sendMessage" />
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/editText_email_dialog_Who_Are_You"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_email_who_are_you"
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_email_dialog_What_Do_You_Want"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.06"
        android:ems="10"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical|top"
        android:hint="@string/dialog_email_message_text"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

</LinearLayout>